# fastapi-boiler

./: README.md  pyproject.toml
fastapi_boiler/: create_app.py
fastapi_boiler/fastapi_boilerplate/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  server.py
fastapi_boiler/fastapi_boilerplate/app/: views.py
fastapi_boiler/fastapi_boilerplate/app/v1/: __init__.py
fastapi_boiler/fastapi_boilerplate/app/v1/health/: router.py
fastapi_boiler/fastapi_boilerplate/core/: database.py  exception_handlers.py  exceptions.py  extensions.py  factory.py  middlewares.py
fastapi_boiler/fastapi_boilerplate/settings/: config.py
fastapi_boiler/fastapi_boilerplate/tests/: conftest.py
fastapi_boiler/fastapi_boilerplate/tests/routers/: test_health.py
tests/: __init__.py
