[tool.poetry]
name = "fastapi-boiler"
version = "0.1.4"
description = "This is a boilerplate project for building a web application using FastAPI"
authors = ["Ali Heydarli <ali.heyderli@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.0"

[tool.poetry.scripts]
fastapi-boiler = "fastapi_boiler.create_app:create_app"
fastapi_boiler = "fastapi_boiler.create_app:create_app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

